--- a/index1.html
+++ b/index1.html
@@ -1,27 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Creative Design Showcase</title>
-	<!-- Link to the external stylesheet -->
-	<link rel-"stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me - Devin O`Rourke</title>
+    <link rel="stylesheet" href="css/AboutMe.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!--Main container to hold the content -->
-    <div class="container">
-	<!--Main container to hold the content -->
-	<div class="container">
-		<!--Site heading -->
-		<h1>Creative Design</h1>
-		<!--Introductory paragraph -->
-		<p>Discover innovative and inspiring designs that blend creativity and functional
-		<!-- Image representing creativity or design -->
-		<img src-"creative-img.jpg" alt="Creative Design Illustration">
-		<!-- Call to action text -->
-		<p><strong>Start your creative journey today!</strong></p>
-		<!-- Button for user interaction -->
-		<button>Get Started</button>
-    </div>
+    <header>
+        <h1 style="font-family: 'Cormorant Garamond', serif; font-size: 3rem; color: #FFD700;">
+            Devin O`Rourke
+        </h1>
+        <p>UNH Student</p>
+        <nav>
+            <a href="AboutMe.html">About Us</a>
+            <a href="CoursesTaken.html">Our Team</a>
+            <a href="Resume.html">Products</a>
+            <a href="UNHWebsite.html">Policies</a>
+            <a href="contactme.html">Contact Us</a>
+        </nav>
+    </header>
+
+    <aside>
+	<img id="intro-image" src="devin-image.jpg" />
+	Etiam sit amet orci eget eros faucibus tincidunt. Duis
+	leo. Sed fringilla mauris sit amet nibh. Donec sodales
+	sagittis magna............
+	</aside>
+
+	<section>
+	<p> Lorem ipsum dolor sit amet, consectetuer
+	adipiscing elit. Aenean commodo ligula eget dolor.
+	Aenean massa. Cum sociis natoque penatibus et
+	magnis dis parturient montes, nascetur ridiculus mus.
+	Donec quam felis, ultricies nec, pellentesque eu,
+	pretium quis, sem........
+	</p>
+	</section>
+
+    <footer>
+        <a href="http://twitter.com"><img id="footer-image" src="twitter-logo.png" /></a>
+	<a href="http://instagram.com"><img id="footer-image" src="instagram-logo.png" /></a>
+	<a href="http://facebook.com"><img id="footer-image" src="facbook-logo.png" /></a>
+	<a href="http://youtube.com"><img id="footer-image" src="youtube-logo.png" /></a>
+	<a href="http://rss.com"><img id="footer-image" src="rss-logo.png" /></a>
+	<br>Copyright &copy;Devin O`Rourke
+    </footer>
 </body>
 </html>
+ 
