--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Devin O`Rourke</title>
-    <link rel="stylesheet" href="css/AboutMe.css">
+    <link rel="stylesheet" href="css/index1.css">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +14,7 @@
         </h1>
         <p>UNH Student</p>
         <nav>
-            <a href="AboutMe.html">About Us</a>
+            <a href="index1.html">About Me</a>
             <a href="CoursesTaken.html">Our Team</a>
             <a href="Resume.html">Products</a>
             <a href="UNHWebsite.html">Policies</a>
