--- a/index1.html
+++ b/index1.html
@@ -23,7 +23,7 @@
     </header>
 
     <aside>
-	<img id="intro-image" src="devin-image.jpg" />
+	<img id="intro-image" src="devin-image.png" />
 	Etiam sit amet orci eget eros faucibus tincidunt. Duis
 	leo. Sed fringilla mauris sit amet nibh. Donec sodales
 	sagittis magna............
