--- a/index1.html
+++ b/index1.html
@@ -15,10 +15,10 @@
         <p>UNH Student</p>
         <nav>
             <a href="index1.html">About Me</a>
-            <a href="CoursesTaken.html">Our Team</a>
-            <a href="Resume.html">Products</a>
-            <a href="UNHWebsite.html">Policies</a>
-            <a href="contactme.html">Contact Us</a>
+            <a href="CoursesTaken.html">Courses Taken</a>
+            <a href="Resume.html">Resume</a>
+            <a href="UNHWebsite.html">UNH Website</a>
+            <a href="contactme.html">Contact Me</a>
         </nav>
     </header>
 
