--- a/CoursesTaken.html
+++ b/CoursesTaken.html
@@ -23,28 +23,17 @@
     </header>
 
     <aside>
-	<img id="intro-image" src="gwebu-image.jpg" />
-	Etiam sit amet orci eget eros faucibus tincidunt. Duis
-	leo. Sed fringilla mauris sit amet nibh. Donec sodales
-	sagittis magna............
+	
+	These are my courses taken: Management Information Systems
 	</aside>
 
 	<section>
-	<p> Lorem ipsum dolor sit amet, consectetuer
-	adipiscing elit. Aenean commodo ligula eget dolor.
-	Aenean massa. Cum sociis natoque penatibus et
-	magnis dis parturient montes, nascetur ridiculus mus.
-	Donec quam felis, ultricies nec, pellentesque eu,
-	pretium quis, sem........
+	<p> Devin
 	</p>
 	</section>
 
     <footer>
-        <a href="http://twitter.com"><img id="footer-image" src="twitter-logo.png" /></a>
-	<a href="http://instagram.com"><img id="footer-image" src="instagram-logo.png" /></a>
-	<a href="http://facebook.com"><img id="footer-image" src="facbook-logo.png" /></a>
-	<a href="http://youtube.com"><img id="footer-image" src="youtube-logo.png" /></a>
-	<a href="http://rss.com"><img id="footer-image" src="rss-logo.png" /></a>
+
 	<br>Copyright &copy;Devin O`Rourke
     </footer>
 </body>
