--- a/CoursesTaken.html
+++ b/CoursesTaken.html
@@ -9,33 +9,32 @@
 </head>
 <body>
     <header>
-        <h1 style="font-family: 'Cormorant Garamond', serif; font-size: 3rem; color: #FFD700;">
-            Devin O`Rourke
-        </h1>
+        <h1>Devin O`Rourke</h1>
         <p>UNH Student</p>
         <nav>
             <a href="index1.html">About Me</a>
             <a href="CoursesTaken.html">Courses Taken</a>
             <a href="Resume.html">Resume</a>
             <a href="UNHWebsite.html">UNH Website</a>
-            <a href="contactme.html">ContactMe</a>
+            <a href="contactme.html">Contact Me</a>
         </nav>
     </header>
 
-    <aside>
-	
-	These are my courses taken: Management Information Systems
-	</aside>
+    <div class="container">
+        <aside>
+            <h3>Courses Taken</h3>
+            <p>These are my courses taken: Management Information Systems</p>
+        </aside>
 
-	<section>
-	<p> Devin
-	</p>
-	</section>
+        <section>
+            <h4>About Devin</h4>
+            <p>Devin is a student at UNH, studying computer science and management...</p>
+        </section>
+    </div>
 
     <footer>
-
-	<br>Copyright &copy;Devin O`Rourke
+        <p>&copy; Devin O`Rourke</p>
     </footer>
 </body>
 </html>
- 
+
