--- a/CoursesTaken.html
+++ b/CoursesTaken.html
@@ -28,7 +28,7 @@
 
         <section>
             <h4>About Devin</h4>
-            <p>Devin is a student at UNH, studying computer science and management...</p>
+            <p>Devin is a student at UNH...</p>
         </section>
     </div>
 
