--- a/CoursesTaken.html
+++ b/CoursesTaken.html
@@ -4,36 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Devin O`Rourke</title>
-    <link rel="stylesheet" href="AboutMe.css">
+    <link rel="stylesheet" href="css/AboutMe.css">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Devin O`Rourke</h1>
+        <h1 style="font-family: 'Cormorant Garamond', serif; font-size: 3rem; color: #FFD700;">
+            Devin O`Rourke
+        </h1>
+        <p>UNH Student</p>
         <nav>
-            <a href="index1.html">About Me</a>
-            <a href="CoursesTaken.html">Courses Taken</a>
-            <a href="Resume.html">Resume</a>
-            <a href="UNHWebsite.html">UNH Website</a>
-            <a href="contactme.html">Contact Me</a>
+            <a href="AboutMe.html">About Us</a>
+            <a href="CoursesTaken.html">Our Team</a>
+            <a href="Resume.html">Products</a>
+            <a href="UNHWebsite.html">Policies</a>
+            <a href="contactme.html">Contact Us</a>
         </nav>
     </header>
 
-    <div class="container">
-        <aside>
-            <h3>Courses Taken</h3>
-            <p>These are my courses taken: Management Information Systems</p>
-        </aside>
+    <aside>
+	<img id="intro-image" src="gwebu-image.jpg" />
+	Etiam sit amet orci eget eros faucibus tincidunt. Duis
+	leo. Sed fringilla mauris sit amet nibh. Donec sodales
+	sagittis magna............
+	</aside>
 
-        <section>
-            <h4>About Devin</h4>
-            <p>Devin is a student at UNH...</p>
-        </section>
-    </div>
+	<section>
+	<p> Lorem ipsum dolor sit amet, consectetuer
+	adipiscing elit. Aenean commodo ligula eget dolor.
+	Aenean massa. Cum sociis natoque penatibus et
+	magnis dis parturient montes, nascetur ridiculus mus.
+	Donec quam felis, ultricies nec, pellentesque eu,
+	pretium quis, sem........
+	</p>
+	</section>
 
     <footer>
-        <p>&copy; Devin O`Rourke</p>
+        <a href="http://twitter.com"><img id="footer-image" src="twitter-logo.png" /></a>
+	<a href="http://instagram.com"><img id="footer-image" src="instagram-logo.png" /></a>
+	<a href="http://facebook.com"><img id="footer-image" src="facbook-logo.png" /></a>
+	<a href="http://youtube.com"><img id="footer-image" src="youtube-logo.png" /></a>
+	<a href="http://rss.com"><img id="footer-image" src="rss-logo.png" /></a>
+	<br>Copyright &copy;Devin O`Rourke
     </footer>
 </body>
 </html>
-
+ 
