--- a/Resume.html
+++ b/Resume.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Devin O`Rourke</h1>
         <nav>
-            <a href="index1.html">About Me</a>
+            <a href="AboutMe.html">About Me</a>
             <a href="CoursesTaken.html">Courses Taken</a>
             <a href="Resume.html">Resume</a>
             <a href="UNHWebsite.html">UNH Website</a>
