--- a/contactme.html
+++ b/contactme.html
@@ -21,14 +21,9 @@
 
     <div class="container">
         <aside>
-            <h3>Courses Taken</h3>
-            <p>These are my courses taken: Management Information Systems</p>
+            <h3>Contact me</h3>
+            <p>dwo1006@usnh.edu</p>
         </aside>
-
-        <section>
-            <h4>About Devin</h4>
-            <p>Devin is a student at UNH...</p>
-        </section>
     </div>
 
     <footer>
