--- a/CoursesTaken.html
+++ b/CoursesTaken.html
@@ -14,7 +14,7 @@
         </h1>
         <p>UNH Student</p>
         <nav>
-            <a href="AboutMe.html">About Us</a>
+            <a href="index1.html">About Us</a>
             <a href="CoursesTaken.html">Our Team</a>
             <a href="Resume.html">Products</a>
             <a href="UNHWebsite.html">Policies</a>
